s3cp resolve some java9 dependencies